--- a/environment.yml
+++ b/environment.yml
@@ -27,7 +27,6 @@ dependencies:
   - setuptools=69.5.1=py39h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
   - tk=8.6.14=h39e8969_0
-  - tzdata=2024a=h04d1e81_0
   - wheel=0.43.0=py39h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=hd590300_5
@@ -50,6 +49,7 @@ dependencies:
       - idna==3.7
       - importlib-metadata==7.1.0
       - importlib-resources==6.4.0
+      - joblib==1.4.2
       - keras==2.10.0
       - keras-preprocessing==1.1.2
       - kiwisolver==1.4.5
@@ -60,17 +60,23 @@ dependencies:
       - numpy==1.26.4
       - oauthlib==3.2.2
       - opencv-python==4.9.0.80
+      - opencv-python-headless==4.5.3.56
       - opt-einsum==3.3.0
       - packaging==24.0
+      - pandas==2.2.2
       - pillow==10.3.0
       - protobuf==3.19.6
       - pyasn1==0.6.0
       - pyasn1-modules==0.4.0
       - pyparsing==3.1.2
       - python-dateutil==2.9.0.post0
+      - pytz==2024.1
       - requests==2.32.2
       - requests-oauthlib==2.0.0
       - rsa==4.9
+      - scikit-learn==1.5.0
+      - scipy==1.13.1
+      - seaborn==0.13.2
       - six==1.16.0
       - tensorboard==2.10.1
       - tensorboard-data-server==0.6.1
@@ -79,7 +85,10 @@ dependencies:
       - tensorflow-estimator==2.10.0
       - tensorflow-io-gcs-filesystem==0.37.0
       - termcolor==2.4.0
+      - threadpoolctl==3.5.0
+      - tqdm==4.66.4
       - typing-extensions==4.12.0
+      - tzdata==2024.1
       - urllib3==2.2.1
       - werkzeug==3.0.3
       - wrapt==1.16.0
